--- a/study/study_0051.html
+++ b/study/study_0051.html
@@ -144,6 +144,25 @@ where ...</p>
 <li>comment on column tabnm.colnm is '컬럼명';</li>
 </ul>
 <br>
+<h2 id="a11-always-id">A11. always id</h2>
+<ul>
+<li>
+<p>자체 KEY, explict하게 사용하지 않아도 자체적으로 만들어짐, explict하게 사용하면 안됨</p>
+</li>
+<li>
+<p>데이터 이행</p>
+<ul>
+<li>default로 변경</li>
+<li>이행한 후에 always로 변경</li>
+<li>최종 sequence 값 설정
+<ul>
+<li>alter sequence sequence_name restart with new_start_number;</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<br>
 <h2 id="b1-디비버-리드오니">B1. 디비버 리드오니</h2>
 <ul>
 <li>
@@ -188,7 +207,7 @@ where ...</p>
 <li>table or script to table 가능</li>
 <li>타입 정확하게 못 잡을 수 있으니깐, 사전 확인 필요</li>
 <li>trucate lock 주의</li>
-<li>(?) use bulk load</li>
+<li>(X) use bulk load (별로다. 죽는 경우가 있는데 왜 인지 확인을 못했다)</li>
 <li>시작 후 진행상태 확인 가능 (오른쪽 아래에 메시지 같은 것 클릭하면 창이 뜸)</li>
 </ul>
 <br>
@@ -239,6 +258,33 @@ where ...</p>
 <li>찾기 (찾기 창 오른쪽에 옵션 있음 : 대소문자구분/정규식 )</li>
 </ul>
 <br>
+<h2 id="c3-프로세스-죽이기">C3. 프로세스 죽이기</h2>
+<h3 id="kill">KILL</h3>
+<ul>
+<li>
+<p>죽이기</p>
+<ul>
+<li>select pg_cancel_backend(pid); -- 살살 죽이기, 현재 query만 죽이기</li>
+<li>select pg_terminate_backend(pid); -- 강력하게 죽이기 (프로세스 죽이기)</li>
+</ul>
+</li>
+<li>
+<p>한꺼번에 죽이기 : 특정 조건하의 모든 프로세스 죽이기 : 30분 동안 트랜잭션 중인 놈 죽이기</p>
+<ul>
+<li>select pg_terminate_backend(pid) from pg_catalog.<strong>pg_stat_activity</strong></li>
+<li>where now() - query_start &gt; '30 minutes' and client_addr::text like '10.%' and (backend_xid is not null or backend_xmin is not null)</li>
+</ul>
+</li>
+<li>
+<p>backend_xmin</p>
+<ul>
+<li>트랜잭션 중에서 현재 조회하고 있는 버전 관리 (트랜잭션 중에 유효)</li>
+<li>트랜잭션이 종료되지 않으면 이 값이 변화하지 않음 -&gt; vacuum이 적절하게 작동하지 않음</li>
+<li>쉬고 있는 오래된 트랜잭션은 죽여줘야 겠네.</li>
+</ul>
+</li>
+</ul>
+<br>
 <h2 id="d1-맥스게이지">D1. 맥스게이지</h2>
 <ul>
 <li>Lock 조회 후 상세화면에서 Kill 가능</li>
@@ -253,7 +299,8 @@ where ...</p>
 </ul>
 </li>
 <li>파티션 테이블 Purge</li>
-<li>SEQ 초기화</li>
+<li>Temp 영역을 사용하는 SQL</li>
+<li></li>
 </ul>
 
         <script async src="https://cdn.jsdelivr.net/npm/katex-copytex@latest/dist/katex-copytex.min.js"></script>
