--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> 23.05.01 50권/년 ^^ </p>
+        <p> 24 도서관에 빌린 책 1권 지속 유지 (13권) </p>
         <p> <a href="./book/book_0129.html">129. AI시대의 고등교육 </a> </p>
+        <br>
+        <p> 23.05.01 50권/년 ^^ (13권) </p>
         <p> <a href="./book/book_0128.html">128. 10대를 위한 공정하다는 착각</a> </p>
         <p> <a href="./book/book_0127.html">127. 화가가 사랑한 나무들 </a> </p>
         <p> <a href="./book/book_0112.html">112. 피니시 (v4)###</a> </p>
