--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
 
     <div> 
         <h3>Docu</h3>
+        <p> <a href="./docu/docu_0016.html">0016. 이렇게 계획 세우면, 저절로 부지런해집니다. (삼프로, 김결일의 지혜의 밤 11화) </a> </p>
+        <br>
         <p> <a href="./docu/docu_0011.html">0011. 메가스터디, 손주은, 삼프로TV </a> </p>
         <p> <a href="./docu/docu_0012.html">0012. KBS 새해맞이 특별강연. 문화심리학자 김정운 </a> </p>
         <p> <a href="./docu/docu_0013.html">0013. 2023.08 유튜브 </a> </p>
