--- a/docu/docu_0016.html
+++ b/docu/docu_0016.html
@@ -93,14 +93,35 @@
 </ul>
 <p>3 근면성실에 대한 뿌리깊은 착각 (잠을 자지 않고)</p>
 <ul>
-<li>지</li>
+<li>잠을 잘 자야지 한다
+<ul>
+<li>나는 몇 시간 자야 하는 사람인가?</li>
+<li>스마트해지고, 계획을 잘 세울 수 있다</li>
+</ul>
+</li>
+<li>잠이 부족한 사람 : 자기 커리어를 파멸적으로 만들 단기적인 유혹을 못 견딤, 자극적인 것에 취약해짐</li>
 </ul>
 <br>
 <h3 id="자기계발-속설-진실-or-거짓">자기계발 속설, 진실 or 거짓</h3>
 <ul>
-<li>긍정확언, 효과 있을까?</li>
-<li>여기저기 결심을 기록해두면 좋을까?</li>
-<li>MBTI J vs P, 성공확률 누가 높을까?</li>
+<li>긍정확언, 효과 있을까?
+<ul>
+<li>즉각적으로 작은 행동 동반</li>
+</ul>
+</li>
+<li>여기저기 결심을 기록해두면 좋을까?
+<ul>
+<li>냉장고 : 챙겨야 하는 것 (욕구와 충돌 발생)</li>
+<li>중요한 결심 : 1곳에만 굳은 글씨로 여백도 없이</li>
+</ul>
+</li>
+<li>MBTI J vs P, 성공확률 누가 높을까?
+<ul>
+<li>동의반복적인 질문임</li>
+<li>계획적인 사람이 성공확률 높은 것 맞지만</li>
+<li>MBTI는 자주 바뀐다. 현재 어떻게 살고 있는지를 나타냄</li>
+</ul>
+</li>
 <li>손으로 직접 쓰기 vs 휴대폰으로 타이핑하기</li>
 <li>완벽주의자가 오히려 성공하기 어려울까?</li>
 <li>목표를 아주 높게 세우는 것이 유리할까?</li>
