--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
     </div>
 
     <div> 
+        <h3>경제</h3>
+        <p> <a href="./eco/eco_0100.html">0100. 문홍철 (연합뉴스, 2024.01.26)</a> </p>
+    </div>
+
+    <div> 
         <h3>Office</h3>
         <p> <a href="./office/office_0001.html">0001. 엑셀 셀</a> </p>
         <p> <a href="./office/office_0008.html">0008. 엑셀 수식</a> </p>
