--- a/study/study_0051.html
+++ b/study/study_0051.html
@@ -163,6 +163,11 @@ where ...</p>
 </li>
 </ul>
 <br>
+<h2 id="a12-pg_toast">A12. pg_toast</h2>
+<ul>
+<li>시스템 내부적으로 사용하는 것 : 크기가 고정되지 않은 컬럼 관리</li>
+</ul>
+<br>
 <h2 id="b1-디비버-리드오니">B1. 디비버 리드오니</h2>
 <ul>
 <li>
@@ -255,7 +260,15 @@ where ...</p>
 </ul>
 <h3 id="vsc">VSC</h3>
 <ul>
-<li>찾기 (찾기 창 오른쪽에 옵션 있음 : 대소문자구분/정규식 )</li>
+<li>
+<p>찾기 (찾기 창 오른쪽에 옵션 있음 : 대소문자구분/정규식 )</p>
+</li>
+<li>
+<p>tab을 스페이스 변경 (탭을 스페이스 4개로 변경)</p>
+<ul>
+<li>\t (정규식 선택 필요)  --&gt; &quot;    &quot;</li>
+</ul>
+</li>
 </ul>
 <br>
 <h2 id="c3-프로세스-죽이기">C3. 프로세스 죽이기</h2>
