--- a/book/book_0130.html
+++ b/book/book_0130.html
@@ -81,28 +81,75 @@
 <li></li>
 </ul>
 <br>
-<h2 id="지은이의-말"><strong>지은이의 말</strong></h2>
+<h2 id="004-지은이의-말"><strong>004 지은이의 말</strong></h2>
 <p>004 아버지가 돌아가신 뒤 나는 아이들을 낳아 기르고 공부하고 일하며 정신없이 달려오던 행보를 멈추고 슬픔에 잠겼다 (미술관에서 치유)</p>
 <br>
 <h2 id="1-나이브-아트와-긍정심리학"><strong>1. 나이브 아트와 긍정심리학</strong></h2>
-<h3 id="천진한-에너지의-동심의-세계--애나-메리-로버트슨-모지스">#천진한 에너지의 동심의 세계 : 애나 메리 로버트슨 모지스</h3>
+<h3 id="11-013-천진한-에너지의-동심의-세계--애나-메리-로버트슨-모지스"><strong>1.1</strong> 013 천진한 에너지의 동심의 세계 : <strong>애나 메리 로버트슨 모지스</strong></h3>
 <p>016 손가락에 관절염이 생겨 바느질을 할 수 없게 되었을 때, 모지스 할머니는 바늘 대신 물감과 붓을 들고 본격적으로 화가의 길에 돌입했다. 그너의 나이 76세 때의 일이다</p>
 <p>018 삶의 도구로서의 그림(알랭 드 보통) 심리치료적 효과 (기억, 희망, 슬픔, 자기이해, 균형성장, 감상)</p>
 <br>
-<h3 id="자기-치유적-삶과-창작물--헤르만-헤세">#자기 치유적 삶과 창작물 : 헤르만 헤세</h3>
+<h3 id="12-027-자기-치유적-삶과-창작물--헤르만-헤세"><strong>1.2</strong> 027 자기 치유적 삶과 창작물 : <strong>헤르만 헤세</strong></h3>
 <p>028 누구나 자기가 행하는 대로 그림을 그릴 수 있는 예술적 자유가 있다고, 모든 사람의 그림은 고유한 자기 표현이니 우리는 그저 감상하면 될 뿐이라고 누군가가 그린 결과에 대해 잘 그린다거나 못 그린다는 평가가 필요한지 모르겠다</p>
 <p>030 헤르만 헤세, 유리알 유희, 노벨문학상, 전쟁반대, 망명생활, 독일 등지고 스위스</p>
 <p>031 기성 사회에 성공적으로 편입되기를 종용하는 부친의 억압적인 교육 태도로 인해 고통받았고, 엄격한 신학원 생활에서도 갈등을 겪었다</p>
 <p>033 미술치료. 스위스 태심의 풍경화를 3천점 이상 수채화로 남긴다</p>
 <p>034 유아기에 발생한 문제 : 비언어적인 접근 선호 (예술로서 치료)</p>
 <br>
-<h3 id="주말-화가의-소소하지만-확실한-행복--앙리-루소">#주말 화가의 소소하지만 확실한 행복 : 앙리 루소</h3>
-<p>042 소확행 :
-<br></p>
-<h3 id="숲속의-세렌디피티-클림트의-풍경화--구스타프-클림트">#숲속의 세렌디피티, 클림트의 풍경화 : 구스타프 클림트</h3>
+<h3 id="13-041-주말-화가의-소소하지만-확실한-행복--앙리-루소"><strong>1.3</strong> 041 주말 화가의 소소하지만 확실한 행복 : <strong>앙리 루소</strong></h3>
+<p>042 소확행 : 지금-여기서 자신의 행복을 발견하려는 사회적 지향의 변화를 반영</p>
+<p>045 생계를 위한 주간의 업무가 끝난 주말에는 붓과 그림 도구를 챙겨 들고 소소하지만 확실한 자신만의 행복을 찾아 나선다 (화가가 되고 싶은 흙수저 세관원)</p>
+<p>046 49세. 은퇴. 전직 화가로 본격적인 2막 시작</p>
+<p>051 동명의 프랑스 계몽주의 철학자 : 장 자크 루소</p>
+<br>
+<h3 id="14-057-숲속의-세렌디피티-클림트의-풍경화--구스타프-클림트"><strong>1.4</strong> 057 숲속의 세렌디피티, 클림트의 풍경화 : <strong>구스타프 클림트</strong></h3>
+<p>057 클럼프</p>
+<ul>
+<li>전기 : 19세기말 빈의 향락적인 모습</li>
+<li>후기 : 담백한 전원의 풍경</li>
+</ul>
+<p>069 자연은 은근히 매혹적이고 다양한 얼굴로 스스로 생각하는 힘을 부여하고, 대중적 사고의 덫에서 빠져나오는 통로 (독창적인 생각과 삶을 바라보는 독자적 시선을 갚고 싶다면)</p>
+<p>069 시시각각 변하는 하늘의 모양에 감탄하면서 열심히 걷다 보면 머릿속에서 생각이 정리되는 메타인식의 순간을 맢이하거나, 고민 해결의 실마리가 보이곤 한다</p>
+<p>070 다양한 초록빞에 노출된 사람의 뇌는 안정을 찾고 혈압과 맥박도 떨어진다</p>
 <br>
 <h2 id="2-아방가르드-화가들과-아들러-심리학"><strong>2. 아방가르드 화가들과 아들러 심리학</strong></h2>
-<p>054 미국인의 3분의 1이상은 세계화가 대체로 해로운 현상이라고 믿고 있다 (중산층의 붕괴)</p>
+<p>074 외부의 비평에 흔들림 없이 자산만의 예술 세계를 완성해 나간 화가들의 인생</p>
+<h3 id="21-075-17세기의-아방가르드-조망의-확장--디에고-벨라스케스"><strong>2.1</strong> 075 17세기의 아방가르드, 조망의 확장 : <strong>디에고 벨라스케스</strong></h3>
+<p>076 디에고 벨라스케스는 17세기 바로크 미술을 대표하는 스페인의 궁정화가</p>
+<p>078 고대와 르네상스 대가들의 작품을 공부하러 로마를 갈 것을 권유받음 (루벤스)</p>
+<p>081 (물감 만들고 화실 청소) 후안 데 파라하, 1654년에 노예 신분에서 해방시키고 자신의 화실에 화가로 취직시키다</p>
+<p>082 종교재판을 벌이며 유대인과 무어인(이슬람교)이 공존하던 이베리아 반도를 카톨릭으로 통일시켜나가던 시기</p>
+<p>083 그가 죽기 1년 전에야 산티아고 기사단으로 임명됨 (긴 기다림 후에 이루어짐)</p>
+<p>086 화면 속의 공간을 화면 뒤로 확장해 상상하도록 만들거나, 거울에 반사된 장면을 그림으로서 화면 밖의 공간을 화면 안으로 투사시키도록 만들었다 (보는 입장, 보이는 입장 사이의 관점의 전화, perspective shifing)</p>
+<p>090 (과당경쟁 사회) 측은지심, 역지사지, 이심전심을 믿는다는 것이 곧 자신의 설 자리를 타인에게 양보하는 결과로 가져올 것이다</p>
+<br>
+<h3 id="22-091-현재성의-미학--에두아르-마네"><strong>2.2</strong> 091 현재성의 미학 : <strong>에두아르 마네</strong></h3>
+<p>092 나폴레옹 3세가 중세의 후미진 골목길로 가득한 파리를 오늘날의 현대적인 모습으로 탈바꿈시키며 문화 부흥에 주력 (베를 하우스만)</p>
+<p>093 그림이 사진과 같을 필요는 없다고 생각</p>
+<p>097 (스승 토마스 쿠튀르) 전통적인 도제식 수업을 하기보다는 제자들로 하여금 독자적인 예술 언어를 개발하기를 독려했다</p>
+<p>097 과거의 역사를 답습하기에 파리의 공기가 더 역동적인고 신선한 것이었다</p>
+<p>099 일본과 무역으로 일본 도자기를 비롯한 많은 물품이 들어왔고, 그 물건을 싸던 포잔지는 일본 판화인 우키요에로 장식되어 있었다</p>
+<p>101 풀밭 위의 점심 식사는 1863년에 낙선전에 출품되었고 괴장한 스캔들을 일으키며 대중들에게도 충격을 주었다</p>
+<p>103 올랭피아는 알렉상드르 뒤마의 소설 춘희에 등장하는 이름이기도 하다</p>
+<p>104 아들러는 모든 개인은 대중으로부터의 사회적 인정을 추구하지만 인정을 받을 수 없을 때, 그리고 스스로가 만들어 놓은 이상적인 자아와 현실의 자아 사이에 놓인 괴리가 커질 때 심리적 좌절과 열등감이 생겨난다고 역설했다</p>
+<br>
+<h3 id="23-107-발레라니가-있는-풍경--에드가-드가"><strong>2.3</strong> 107 발레라니가 있는 풍경 : <strong>에드가 드가</strong></h3>
+<p>108 노동계급의 고된 일상에 지속적으로 관심을 가진 것은 사회를 바라보는 그의 직관적이고 사실적인 인식을 반영하는 듯하다</p>
+<p>110 (가장 인상주의적 특진이 없는 화가) 인상파 화가들은 순간적인 빛의 변화를 밝은색을 중심으로 표현했던 반면, 데생과 크로키에 뛰어났던 드가는 자연이 아니라 인체의 순간적인 움직임을 포착하는데 주력했다</p>
+<p>111 익명의 발레리노가 보이는 순간의 동작에 시선을 두었다. 순간적인 움직임을 포착하기에 가장 적합한 기술은 데생과 크로키였고, 드가는 이 두 분야의 전문가였다</p>
+<p>113 드가의 다른 작품들이 그린 것처럼 등장인물들은 각자 자신의 세계에 빠져 있고 유대감은 전혀 느껴지지 않는다</p>
+<p>115 그의 어머니는 크리올 여성 (프랑스인 부유층 남성과 흑인 노예 예성 사이에 태어나 혼혈인 크리올이 사회 중간계급을 이룸), 삼촌과 바람, 13세 때 죽음</p>
+<p>116 집안의 유전병인 시력 이상</p>
+<p>117 빚을 갚아나가기 위해 발레극장이나 오페라극장, 세탁소 같은 곳에 찾아가 모델료를 지불하지 않아도 되는 여인들을 관찰하고 그 움직임을 빠른 속도로 그리곤 했다</p>
+<p>119 드가는 시력을 거의 상실할 무렵이 되자 작업실에 은둔하며 숱한 조각 작업에 몰두했고 사후에 그의 집에서는 엄청난 량의 목욕하는 여인들의 조각이 발견되었다</p>
+<br>
+<h3 id="24-121-세상을-바꾼-세잔의-사과--폴-세잔"><strong>2.4</strong> 121 세상을 바꾼 세잔의 사과 : <strong>폴 세잔</strong></h3>
+<p>122 세잔의 그림은 채색이 덜 된 듯한 느낌이 든다</p>
+<p>123 그림이 벽에 걸리는 순간 죽음을 맞는다 (피카소)</p>
+<p>124 원근법을 사용하는 대신 색채를 덧입혀 입체감을 표현한 결과, 화면에 색이 칠해지지 않았거나 덜 칠해진 부분도 있고 두껍게 덧칠된 부분도 있다</p>
+<p>126 그저 잘 그린 사과는 입에 군침을 돌게 할 뿐이지만 세잔의 사과는 마음에 말을 건넨다 (모리스 드니)</p>
+<p>133 1870년 프레시아 전쟁이 발발했을 때 그는 징집을 피해 나중에 그의 부인이 된 마리 오르탕스 피케와 함께 파리를 떠났다</p>
+<p>137 세잔의 유연했던 시각, 다자적 관점에서 대상을 이해하려는 노력이 어느때보다 절실하게 느껴지는 때다</p>
 <br>
 <h2 id="3-추상의-세계와-게슈탈트-심리학">3. 추상의 세계와 게슈탈트 심리학</h2>
 <br>
