--- a/office/office_0001.html
+++ b/office/office_0001.html
@@ -81,6 +81,11 @@
 <li><a href="./office_0008.html">엑셀 수식</a></li>
 </ul>
 <br>
+<h2 id="017-엑셀-피벗-날짜-컬럼-년분기월-등등등"><strong>017. 엑셀 피벗 날짜 컬럼 (년,분기,월 등등등)</strong></h2>
+<ul>
+<li>날짜 형식의 컬럼의 경우 &quot;분석 - 그룹필드&quot;에서 필요한 컬럼을 편집하면 됨</li>
+</ul>
+<br>
 <h2 id="016-외부파일-연결-내역-잡기"><strong>016. 외부파일 연결 내역 잡기</strong></h2>
 <ul>
 <li>수식 검사하면 됨 : 외부파일일 경우에는 &quot;[&quot;로 찾으면 됨</li>
