--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 24 도서관에 빌린 책 1권 지속 유지 </p>
+        <p> <a href="./book/book_0131.html">131. 격차사회 </a> </p>
         <p> <a href="./book/book_0130.html">130. 미술관에 간 심리학 </a> </p>
         <p> <a href="./book/book_0129.html">129. AI시대의 고등교육 </a> </p>
         <br>
