--- a/book/book_0131.html
+++ b/book/book_0131.html
@@ -169,7 +169,7 @@
 <p>부자는 적게 파악되는 현상 / 빈곤자도 더 적게 파악되는 현상</p>
 <br>
 <h2 id="02-평등신화-붕괴의-요인을-찾다"><strong>02. 평등신화 붕괴의 요인을 찾다</strong></h2>
-<p>장기불활에 따른 실업률 증가</p>
+<p>장기불황에 따른 실업률 증가</p>
 <ul>
 <li>실업률 / 구직포기자도 고려 필요 (일은 하고 싶지만 장기불황으로 구하기 힘듦)</li>
 <li>실업기간의 증가</li>
@@ -197,14 +197,62 @@
 </ul>
 <br>
 <h2 id="03-격차의-진행-속에서---지금-무엇이-일어나고-있는가"><strong>03. 격차의 진행 속에서 - 지금 무엇이 일어나고 있는가</strong></h2>
-<p>018 블라</p>
+<p>실태조사</p>
+<ul>
+<li>고령자</li>
+<li>모자가정, 독거노인(노인부부에 비해 2배 이상 높음, 가족간의 경제적 지원 약해짐)</li>
+<li>청년층 (불경기)</li>
+</ul>
+<p>최저임금</p>
+<ul>
+<li>최저임금이 선진국의 절반 수준</li>
+<li>최저임금이 생활보호제도 지급액보다 적음</li>
+</ul>
+<p>사회현상</p>
+<ul>
+<li>인재가 대기업에서 소득이 많은 금융기업으로</li>
+<li>의대과열 : 특히 성형외과 (리스크 적고 고소득)</li>
+<li>개인의 법인화 : 법인세가 개인소득세보다 낮음</li>
+</ul>
+<p>공공사업을 통한 지역간 격차 해소가 줄어듦</p>
+<p>기회의 평등 : 전원참가의원칙, 비차별의원칙</p>
+<ul>
+<li>교육 (본이의 능력, 부모의 소득, 부모의 교육수준)</li>
+<li>입시에 특화된 사립고</li>
+<li>교육의 공적 지출 삭감 : 의무교육을 마치면 부담하는 교육비 커짐</li>
+<li>사회이동의 정도가 낮아짐 (부모의직업 vs 자식의직업)</li>
+</ul>
 <br>
 <h2 id="04-격차사회의-방향을-생각하다"><strong>04. 격차사회의 방향을 생각하다</strong></h2>
-<p>018 블라</p>
+<p>경제 효율을 위해서는 격차 확대는 피할 수 없는 것인가?</p>
+<ul>
+<li>효율성과 공평성의 트레이드오프</li>
+<li>수확체감의 법칙 : 유능한 사람에게 높은 소득을 주더라도 거기서 얻을 수 있는 경제 효율의 효과는 한계가 있다</li>
+</ul>
+<p>빈곤층 증가는 사회적 문제를 야기시킨다</p>
+<ul>
+<li>낮은 임금은 근로의욕을 낮춘다</li>
+<li>실업자의 양산 : 인적자원의 낭비 (자원의 손실이다)</li>
+<li>범죄 증가 가능성</li>
+<li>사회적 부담 증가 : 공적인 경제 원조의 대상이 됨</li>
+</ul>
+<p>격차 확대</p>
+<ul>
+<li>GatedTown : 부유층만의 사회</li>
+<li>카트리나 사태 : 부유층은 대부분 탈출에 성공했지만,,,</li>
+<li>건강격차 확대 : 먹거리, 의료(의료보험개혁 실패)</li>
+</ul>
+<p>니트족60(부모의 기대)과 프리터족200(아르바이트)</p>
+<ul>
+<li>비자발적 프리터가 전국민적으로 400만까지</li>
+</ul>
+<p>계층의 고착화 그대로 둘 것인가</p>
+<ul>
+<li>빈곤층을 최대한 줄이는 정책</li>
+<li>유능한 사람이 대우받는 사회</li>
+</ul>
 <br>
 <h2 id="05-격차사회를-위한-처방전-비복지국가에서-벗어나기"><strong>05. 격차사회를 위한 처방전 비복지국가에서 벗어나기</strong></h2>
-<p>018 블라</p>
-<br>
 
             
             
