--- a/MY_PGMB/my_not.html
+++ b/MY_PGMB/my_not.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <header> 
-<p><a href="./my_python.html">python</a></p>
-<p><a href="./my_not.html">not</a></p>
+<h2>not</h2>
+</header>
+<p><a href="./contensts/A0000001.pdf">A0000001. 이건 아니지
+</a></p>
 </body>
 </html>
