MY PGM BLOG 240416H

--- a/MY_PGMB/inex.html
+++ b/MY_PGMB/inex.html
@@ -7,6 +7,6 @@
 <body>
     <header> 
 <p><a href="./my_python.html">python</a></p>
-<p><a href="./my_not.html">not</a></p>
+<p><a href="./my_차이나는 클라스.html">차이나는 클라스</a></p>
 </body>
 </html>
