MY PGM BLOG 24.04.17

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <p> <a href="https://openai.com/blog/chatgpt/">챗GPT</a> </p>
         <br>
          
+        <p> <a href="./MY_PGMB/index.html">MY PGM BLOG</a> </p>
+        <br>
+         
         <p> <a href="./my/my_0100.html">0100. MY 금융</a> </p>
         <p> <a href="./my/my_0110.html">0110. 금융</a> </p>
         <p> <a href="./my/my_0120.html">0120. 부동산</a> </p>
