--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -12,5 +12,7 @@
 </a></p>
 <p><a href="./contensts/A0000002.pdf">A0000002. 변수 및 연산자
 </a></p>
+<p><a href="./contensts/A0000002.pdf">A0000002. 작성중
+</a></p>
 </body>
 </html>
