--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -12,7 +12,11 @@
 </a></p>
 <p><a href="./contensts/A0000002.pdf">A0000002. 변수 및 연산자
 </a></p>
-<p><a href="./contensts/A0000002.pdf">A0000002. 작성중
+<p><a href="./contensts/A0000003.pdf">A0000003. 데이터타입
+</a></p>
+<p><a href="./contensts/A0000004.pdf">A0000004. 기본제어구조(선택 및 반복)
+</a></p>
+<p><a href="./contensts/A0000005.pdf">A0000005. 주요 함수
 </a></p>
 </body>
 </html>
