--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -8,6 +8,8 @@
     <header> 
 <h2>python</h2>
 </header>
+<p><a href="./conhtml/mpb_0001.html">인공지능의 역사
+</a></p>
 <p><a href="./contensts/A0000001.pdf">A0000001. 파이썬 프로그래밍 기초
 </a></p>
 <p><a href="./contensts/A0000002.pdf">A0000002. 변수 및 연산자
