--- a/MY_PGMB/my_차이나는 클라스.html
+++ b/MY_PGMB/my_차이나는 클라스.html
@@ -12,7 +12,9 @@
 </a></p>
 <p><a href="./contensts/B0000002.pdf">B0000002. 당신도 빅뱅을 믿나요
 </a></p>
-<p><a href="./contensts/B0000003.pdf">B0000003. DNA의 배신</a></p>
-<p><a href="./contensts/B0000004.pdf">B0000004. 지구가 찿는 것도 한계가 있다</a></p>
+<p><a href="./contensts/B0000003.pdf">B0000003. DNA의 배신_암
+</a></p>
+<p><a href="./contensts/B0000004.pdf">B0000004. 지구가 찿는 것도 한계가 있다
+</a></p>
 </body>
 </html>
