--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -22,5 +22,13 @@
 </a></p>
 <p><a href="./contensts/A0000005.pdf">A0000005. 주요 함수
 </a></p>
+<p><a href="./contensts/A0000006.pdf">A0000006. 리스트
+</a></p>
+<p><a href="./contensts/A0000007.pdf">A0000007. 튜플 / 딕셔너리
+</a></p>
+<p><a href="../study/study_0071.html">파이썬 수강
+</a></p>
+<p><a href="../study/study_0072.html">비전공자를 위한 첫 코딩 챌린지
+</a></p>
 </body>
 </html>
