--- a/MY_PGMB/index.html
+++ b/MY_PGMB/index.html
@@ -8,5 +8,7 @@
     <header> 
 <p><a href="./my_python.html">python</a></p>
 <p><a href="./my_차이나는 클라스.html">차이나는 클라스</a></p>
+<p><a href="./my_독서_심리학.html">독서_심리학</a></p>
+<p><a href="./my_독서_시.html">독서_시</a></p>
 </body>
 </html>
