--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -20,15 +20,21 @@
 </a></p>
 <p><a href="./contensts/A0000004.pdf">A0000004. 기본제어구조(선택 및 반복)
 </a></p>
-<p><a href="./contensts/A0000005.pdf">A0000005. 주요 함수
-</a></p>
 <p><a href="./contensts/A0000006.pdf">A0000006. 리스트
 </a></p>
 <p><a href="./contensts/A0000007.pdf">A0000007. 튜플 / 딕셔너리
 </a></p>
+<p><a href="./contensts/A0000008.pdf">A0000008. 함수 1
+</a></p>
+<p><a href="./contensts/A0000009.pdf">A0000009. 함수 2
+</a></p>
 <p><a href="../study/study_0071.html">파이썬 수강
 </a></p>
 <p><a href="../study/study_0072.html">비전공자를 위한 첫 코딩 챌린지
+</a></p>
+<p><a href="./contensts/A0000005.pdf">A0000005. 주요 함수
+</a></p>
+<p><a href="./contensts/A0000010.pdf">A0000010. 주의사항
 </a></p>
 </body>
 </html>
