--- a/MY_PGMB/index.html
+++ b/MY_PGMB/index.html
@@ -10,5 +10,6 @@
 <p><a href="./my_차이나는 클라스.html">차이나는 클라스</a></p>
 <p><a href="./my_독서_심리학.html">독서_심리학</a></p>
 <p><a href="./my_독서_시.html">독서_시</a></p>
+<p><a href="./my_빅데이터_기초.html">빅데이터_기초</a></p>
 </body>
 </html>
