--- a/my/my_0110.html
+++ b/my/my_0110.html
@@ -76,6 +76,19 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="금융">금융</h1>
+<h2 id="연금저축-vs-irp">연금저축 vs IRP</h2>
+<ul>
+<li><strong>IRP 입금 후 출금 안됨 (연금저축과 다름)</strong></li>
+<li>이관시 매도후 현금으로 이관됨</li>
+<li>KB : (이율 : <strong>24.04.26 : 3.48%</strong>), (거래내역 : <strong>자산뱅킹-MY자산현황-거래내역</strong>)</li>
+<li>세액공제 한도 초과 금액 : 중도인출 및 연금수련시 과세대상이 되지 않음</li>
+<li>세액공제는 13.2%, 중도해지시에는 16.5% 부담</li>
+<li>70세 이하 (5.5%), 80세 이하(4.4%), 80세 이상(3.3%)</li>
+<li>퇴직소득세율 (30% 절감 효과)</li>
+<li>연금수령액이 연간 1200만원 초과시 종합과세</li>
+<li>합쳐서 1800만원 한도</li>
+</ul>
+<p><br><br></p>
 <h2 id="isa">ISA</h2>
 <ul>
 <li>전 금융기관 1개만 소유 가능 (필요하면 계죄이관 : 현금화 이후에 이전 가능)
@@ -115,16 +128,6 @@
 </li>
 </ul>
 </li>
-</ul>
-<p><br><br></p>
-<h2 id="연금저축-vs-irp">연금저축 vs IRP</h2>
-<ul>
-<li>세액공제 한도 초과 금액 : 중도인출 및 연금수련시 과세대상이 되지 않음</li>
-<li>세액공제는 13.2%, 중도해지시에는 16.5% 부담</li>
-<li>70세 이하 (5.5%), 80세 이하(4.4%), 80세 이상(3.3%)</li>
-<li>퇴직소득세율 (30% 절감 효과)</li>
-<li>연금수령액이 연간 1200만원 초과시 종합과세</li>
-<li>합쳐서 1800만원 한도</li>
 </ul>
 <p><br><br></p>
 <h2 id="펀드-수수료">펀드 수수료</h2>
