--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -28,6 +28,12 @@
 </a></p>
 <p><a href="./contensts/A0000009.pdf">A0000009. 함수 2
 </a></p>
+<p><a href="./contensts/A0000011.pdf">A0000011. 모듈_패키지
+</a></p>
+<p><a href="./contensts/A0000012.pdf">A0000012. tkinter 1
+</a></p>
+<p><a href="./contensts/A0000014.pdf">A0000014. tkinter 2
+</a></p>
 <p><a href="../study/study_0071.html">파이썬 수강
 </a></p>
 <p><a href="../study/study_0072.html">비전공자를 위한 첫 코딩 챌린지
@@ -35,6 +41,8 @@
 <p><a href="./contensts/A0000005.pdf">A0000005. 주요 함수
 </a></p>
 <p><a href="./contensts/A0000010.pdf">A0000010. 주의사항
+</a></p>
+<p><a href="./contensts/A0000013.pdf">A0000013. DeBug
 </a></p>
 </body>
 </html>
