--- a/book/book_0132.html
+++ b/book/book_0132.html
@@ -223,6 +223,35 @@
 <p>119 시간이 지날수록 과거 한국기업이 잘하고 있었지만, 부가가치가 떨어지는 산업에 희망을 걸고 계속 투자하는 건 어리석은 판단이 될 공산이 크다</p>
 <p>120 통화량과 통화지표는 ROE 공식 중 분자 부분인 유동성 확대로 수요를 결정하는 정책이다</p>
 <p>126 해당 국가가 거시경제 혹은 산업 측면에서 구조적 문제가 있으면 단순한 유동성 확대는 기업의 ROE를 장기적으로 상승시키는 데 한계가 있다</p>
+<br>
+<h2 id="03-50년-경제주기와-기술혁신주기의-커플링"><strong>03. 50년 경제주기와 기술혁신주기의 커플링</strong></h2>
+<p>137 콘트라티예프파동 : 50년 경제주기 : 호황-거품-침체-불황-바닥-회복</p>
+<p>141 투자란 그 국가 운명에 대한 베팅 (GDP의 장기 성장 여부 중요)</p>
+<p>144 큰 시대적 흐름을 먼저 읽고 그 흐름에 올라타야 한다</p>
+<p>145 자본주의 국가에서는 약50년마다 경기의 순환, 더 정확히는 물가 파동이 일어난다 (새로운 기술 등장 때문)</p>
+<p>147 50년 경제주기가 더 짧아질 수 있다 (기술 발전 속도 빨라짐)</p>
+<p>149 경기순환(슘페터) : 기업가, 과거의 균형을 파괴하고 새로운 균형 찾아감</p>
+<p>150 불황을 극복하기 위해 혁신하는 것이 아닌, 혁신을 수행할 때 불가피하게 불황을 겪는다</p>
+<p>160 경제가 고속으로 성장하는 시기에는 부동산 가격 상승 속도가 가파르다</p>
+<p>162 시대흐름을 탄다는 건 부의 기회를 만날 확률이 매우 높아진다는 말 (경제주기를 잘 타야만 부자가 된다)</p>
+<p>165 미국의 중국 기술 굴기에 대한 견제 속도가 빨라지면서 미중간 기술 패권 전쟁이 점점 더 치열해지고 있다</p>
+<p>167 그림 3-14 메릴린치 투자 시계
+<img src="./book_0132_%EB%A9%94%EB%A6%B4%EB%A6%B0%EC%B9%98%ED%88%AC%EC%9E%90%EC%8B%9C%EA%B3%84.jpg" alt="메릴린치투자시계"></p>
+<ul>
+<li>상품시장 수익률은 디플레이션 초기와 후기 모두 안 좋다</li>
+<li>채권은 경기침체 초기에는 채권 수요 증가, 후기에는 감소, 고수익 추가하면서,,,</li>
+<li>주식은 경기가 안 좋을 때, 특히 경기 침체 후반기부터 좋다</li>
+</ul>
+<p>168 스태그플레이션 상황에서는 골치 아프게 머리 쓸 것 없이 예금하는 게 마음이 편하다 (5%, 코로나 시기에는 3% 상품에 사람들이 몰려감)</p>
+<p>170 (투자) 최저점을 찾아 들어간다는 건 어리석은 생각이다. 저점/고점 찾는 것보다 경기 흐름 파악이 더 중요하다.</p>
+<p>172 경제주기는 일종의 부채주기다. 부채를 일으키지 않으면 경제가 잘 돌아가지 않는다</p>
+<p>174 경기 부양책은 단기 처방에 불과하다. 경제를 진짜로 살리는 해법은 생산성을 끌어올리는 것뿐이다</p>
+<p>176 예금금리 5% -&gt; 대출금리 7% -&gt; (기업) 이익 10% (불가능하다)</p>
+<p>177 언젠부턴가 중앙은행이 시장에 들어와 경제를 살리고 죽이는 대표 선수로 활약 중이다</p>
+<p>181 S&amp;P500, 역사적으로 이렇게 장기간 우상향 곡선을 그릴 수 있는 국가는 많지 않다</p>
+<p>185 월셔5000 : 지수를 M2로 나눔</p>
+<p>191 금융에 투자하는 사람들은 자산을 지켜낼 수 있겠지만 월급에만 의존해 살아가는 노동자는 점점 빈부격차가 커지면서 하층으로 밀려나게 될 것이다</p>
+<p>193 지금처럼 돈을 헬리콥터로 뿌리는 경제하에서 인플레이션으로 나의 소득이 줄어들지 않으려면 인플레이션을 헤지하는 금융자산을 갖고 있어야 한다</p>
 
             
             
