--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -32,7 +32,19 @@
 </a></p>
 <p><a href="./contensts/A0000012.pdf">A0000012. tkinter 1
 </a></p>
-<p><a href="./contensts/A0000014.pdf">A0000014. tkinter 2
+<p><a href="./contensts/A0000014.pdf">A0000014. tkinter 2 (미작성)
+</a></p>
+<p><a href="./contensts/A0000016.pdf">A0000016. 파일 1
+</a></p>
+<p><a href="./contensts/A0000017.pdf">A0000017. 파일 2
+</a></p>
+<p><a href="./contensts/A0000018.pdf">A0000018. 객체지향 1
+</a></p>
+<p><a href="./contensts/A0000019.pdf">A0000019. 객체지향 2
+</a></p>
+<p><a href="./contensts/A0000020.pdf">A0000020. 객체지향 3
+</a></p>
+<p><a href="./contensts/A0000015.pdf">A0000015. 인공지능 기초
 </a></p>
 <p><a href="../study/study_0071.html">파이썬 수강
 </a></p>
