--- a/book/book_0132.html
+++ b/book/book_0132.html
@@ -142,8 +142,8 @@
 <p>초판 3쇄 발행일 2023.08.28, 브랜드:경이로움, 발행처:사이다경제, 지은이:안유화</p>
 <br>
 <h2 id="01-투자란-시대적-흐름에-배팅하는-것"><strong>01. 투자란 시대적 흐름에 배팅하는 것</strong></h2>
-<p>020 영화 관상 : 나는 사람의 얼굴을 봤을 뿐, 시대의 모습을 보지 못했소. 시시각각 변하는 파도만 본 격이지. 바람을 봐야 하는데. 파도를 만드는 건 바람인데 말이오</p>
-<p>022 바람직한 현상은 아닐지라도, 지금은 경제랙의 유무가 그 사람의 지위와 역할까지 결정하는 강력한 증표가 되었다</p>
+<p>020 영화 &quot;관상&quot; : 나는 사람의 얼굴을 봤을 뿐, 시대의 모습을 보지 못했소. 시시각각 변하는 파도만 본 격이지. 바람을 봐야 하는데. 파도를 만드는 건 바람인데 말이오</p>
+<p>022 바람직한 현상은 아닐지라도, 지금은 경제력의 유무가 그 사람의 지위와 역할까지 결정하는 강력한 증표가 되었다</p>
 <p>023 시대흐름이란 세상을 지배하는 기술과 자본 및 소비의 흐름을 총칭한다. 흐름을 알아야 부의 반열에 오르고, 경제적 자유도 실현할 수 있다</p>
 <p>023 100년 전만 해도 전 세계 농업 인구 비율은 90%였다. 그러나 현재 세계 농업 인구 비율은 5%에 그친다</p>
 <p>029 테슬라의 상용화가 업계의 발 빠른 변화를 유도하는 촉매가 되었다. 대중은 누군가가 처음 시도한 사업, 기존과 전혀 다른 새로운 시대흐름에 열광한다</p>
@@ -151,11 +151,11 @@
 <p>030 섹터에서 수익의 70~80%가 이미 결정된다고 말한다  /  종목 선택에서 나머지 20~30%</p>
 <p>031 내연 기관 자동차 시대의 종말이 왔음을 직감하고도 / 미련을 놓지 않는다면 설령 장기 보유를 한다고 해도 투자에 실패할 가능성이 크다</p>
 <p>035 소문이 더 멀리 퍼져 사람이 몰려들기 전에 미리 흐름에 올라타는 것이 관건이다</p>
-<p>037 내일의 종가를 맞히는 것보다는 기업의 가치, 해당 섹터의 시대적 흐르과 그 성장성에 더 관심을 가져야 한다</p>
+<p>037 내일의 종가를 맞히는 것보다는 기업의 가치, 해당 섹터의 시대적 흐름과 그 성장성에 더 관심을 가져야 한다</p>
 <p>037 (찰리 멍거) 미시적인 주가보다 거시적인 산업의 흐름으로 기업의 가치를 파악하는 일이 중요함을 강조했다</p>
 <p>037 스토리가 있어야 감동을 주고 공감을 이끌며 위기에 빠지더라도 대중의 지지를 받는다</p>
 <p>040 인간은 자신이 아는 이론을 투자에 적용하기보다 심리에 더 휘둘리기 때문이다</p>
-<p>040 자신에게 익숙한 투자만 하는 사람들의 공통점은 실패를 경허하면서도 반복투자에서 벗어나지 못한다는 것이다</p>
+<p>040 자신에게 익숙한 투자만 하는 사람들의 공통점은 실패를 경험하면서도 반복투자에서 벗어나지 못한다는 것이다</p>
 <p>041 질문</p>
 <ul>
 <li>왜 당신은 포트폴리오에 외국 주식을 포함시키지 않는가?</li>
@@ -168,8 +168,8 @@
 <li>사후과잉 확신 : 과거의 예측 가능하지 않았던 이벤트들을 예측 가능하다고 인지</li>
 <li>손실 회피 : 수익 창출보다 손실 회피를 더 선호</li>
 <li>친숙성 : 친숙한 시장을 선호 (국내시장 선호)</li>
-<li>심리 계좌 : 경제적 의사 결정 시 자신이 정한 주관적 기준으로 계정을 성정하고 손익을 계산</li>
-<li>보유  보유한 자산에 더욱 가치를 둠</li>
+<li>심리 계좌 : 경제적 의사 결정 시 자신이 정한 주관적 기준으로 계정을 상정하고 손익을 계산</li>
+<li>보유 : 보유한 자산에 더욱 가치를 둠</li>
 <li>기준점 : 임의의 가격 수준, 기준점에 집착</li>
 </ul>
 <p><strong>044 주목해야하는 2가지 사회적 흐름 : 고령화 사회 진입, MZ세대의 부상</strong></p>
@@ -189,7 +189,7 @@
 </ul>
 <p><strong>060 자본주의 사회에서 자본가로 살아가야 한다</strong>  (주식투자는 주주가 되는 것이미, 자본가가 되는 것이다)</p>
 <p>063 금융상품을 소비할 때는 더욱 신중하게 접근해야 한다. 잃어도 괜찮은 돈은 세상에 단 1푼도 없다</p>
-<p>066 물가상승률을 이겨예 하는 자산관리의 중요성</p>
+<p>066 물가상승률을 이겨야 하는 자산관리의 중요성</p>
 <p>071 매일 주식시장을 들여다보고 경험해보면 왠지 위험이 커 보인다. 그러나 장기적인 시각으로 접근하면 주식이야말로 유망한 투자처가 된다</p>
 <p>072 동서양을 막론하고 성공적인 투자자들의 공통점은 장기 투자를 했다는 점이다</p>
 <p>073 단기투자(1~5년) 10~20% / 장기투자(20~30년) 60~70%</p>
@@ -213,7 +213,7 @@
 <p>097 ROE를 구하는 공식에서 분자에 들어갈 순수 영업이익 말고도 혹시 다른 조건이 보태져 숫자가 높게 나타났는지 확인해야 한다 / 기업의 부채가 늘어나도 ROE가 높아진다</p>
 <p>098 ROE가 높게 나왔더라도 PER, PBR, EPS자료를 함께 살펴야 해당 기업의 주가가 적정한지를 정확히 알 수 있다</p>
 <p>099 PBR = ROE * PER,  (시가총액/자기자본 = 당기순이익/자기자본 * 시가총액/당기순이익)</p>
-<p>104 주식이 저평가된 원인을 찾아야 한다. 몇몇 사람만 공유하는 지배구조 리스크가 있거나, 미래흐름에 역행ㅎ는 사업을 하는 기업일 수 있음을 체크해야 한다</p>
+<p>104 주식이 저평가된 원인을 찾아야 한다. 몇몇 사람만 공유하는 지배구조 리스크가 있거나, 미래흐름에 역행하는 사업을 하는 기업일 수 있음을 체크해야 한다</p>
 <p>105 PER 30배 이하, PBR 5배수 아래인 종목은 저평가 가능성이 있음</p>
 <p>106 PBR 혹은 PER이 낮은 회사보다 ROE가 지속적으로 높은 회사를 투자의 대상으로 삼아야 한다</p>
 <p>112 투자하려는 기업의 섹터가 국가의 지원을 받는지, 정부가 해당 사업에 예산을 많이 책정했는지, 해당 섹터의 수요를 확대하기 위한 정부의 노력이 무엇인지를 알아야 한다 (<strong>정부의 정책 흐름</strong>)</p>
@@ -241,8 +241,8 @@
 <li>상품시장 수익률은 디플레이션 초기와 후기 모두 안 좋다</li>
 <li>채권은 경기침체 초기에는 채권 수요 증가, 후기에는 감소, 고수익 추가하면서,,,</li>
 <li>주식은 경기가 안 좋을 때, 특히 경기 침체 후반기부터 좋다</li>
+<li>스태그플레이션 상황에서는 골치 아프게 머리 쓸 것 없이 예금하는 게 마음이 편하다 (5%, 코로나 시기에는 3% 상품에 사람들이 몰려감)</li>
 </ul>
-<p>168 스태그플레이션 상황에서는 골치 아프게 머리 쓸 것 없이 예금하는 게 마음이 편하다 (5%, 코로나 시기에는 3% 상품에 사람들이 몰려감)</p>
 <p>170 (투자) 최저점을 찾아 들어간다는 건 어리석은 생각이다. 저점/고점 찾는 것보다 경기 흐름 파악이 더 중요하다.</p>
 <p>172 경제주기는 일종의 부채주기다. 부채를 일으키지 않으면 경제가 잘 돌아가지 않는다</p>
 <p>174 경기 부양책은 단기 처방에 불과하다. 경제를 진짜로 살리는 해법은 생산성을 끌어올리는 것뿐이다</p>
