--- a/MY_PGMB/index.html
+++ b/MY_PGMB/index.html
@@ -11,5 +11,9 @@
 <p><a href="./my_독서_심리학.html">독서_심리학</a></p>
 <p><a href="./my_독서_시.html">독서_시</a></p>
 <p><a href="./my_빅데이터_기초.html">빅데이터_기초</a></p>
+<p><a href="./my_삶과 죽음.html">삶과 죽음</a></p>
+<p><a href="./my_2024년 독서 _ 도서관에서 빌린 책 1권 유지.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
+<p><a href="./my_2023년 독서 _ 5월이후 (13권).html">2023년 독서 _ 5월이후 (13권)</a></p>
+<p><a href="./my_독서.html">독서</a></p>
 </body>
 </html>
