--- a/MY_PGMB/index.html
+++ b/MY_PGMB/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <header> 
+<p><a href="./my_Office.html">Office</a></p>
 <p><a href="./my_python.html">python</a></p>
 <p><a href="./my_차이나는 클라스.html">차이나는 클라스</a></p>
 <p><a href="./my_독서_심리학.html">독서_심리학</a></p>
@@ -15,5 +16,11 @@
 <p><a href="./my_2024년 독서 _ 도서관에서 빌린 책 1권 유지.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
 <p><a href="./my_2023년 독서 _ 5월이후 (13권).html">2023년 독서 _ 5월이후 (13권)</a></p>
 <p><a href="./my_독서.html">독서</a></p>
+<p><a href="./my_DASP.html">DASP</a></p>
+<p><a href="./my_SW자산관리사(C-SAM).html">SW자산관리사(C-SAM)</a></p>
+<p><a href="./my_HTML_CSS.html">HTML_CSS</a></p>
+<p><a href="./my_Github.html">Github</a></p>
+<p><a href="./my_빅데이터_R.html">빅데이터_R</a></p>
+<p><a href="./my_4차산업혁명.html">4차산업혁명</a></p>
 </body>
 </html>
