--- a/book/book_0132.html
+++ b/book/book_0132.html
@@ -235,8 +235,8 @@
 <p>160 경제가 고속으로 성장하는 시기에는 부동산 가격 상승 속도가 가파르다</p>
 <p>162 시대흐름을 탄다는 건 부의 기회를 만날 확률이 매우 높아진다는 말 (경제주기를 잘 타야만 부자가 된다)</p>
 <p>165 미국의 중국 기술 굴기에 대한 견제 속도가 빨라지면서 미중간 기술 패권 전쟁이 점점 더 치열해지고 있다</p>
-<p>167 그림 3-14 메릴린치 투자 시계
-<img src="./book_0132_%EB%A9%94%EB%A6%B4%EB%A6%B0%EC%B9%98%ED%88%AC%EC%9E%90%EC%8B%9C%EA%B3%84.jpg" alt="메릴린치투자시계"></p>
+<p>167 그림 3-14 메릴린치 투자 시계</p>
+<p><img src="./book_0132_%EB%A9%94%EB%A6%B4%EB%A6%B0%EC%B9%98%ED%88%AC%EC%9E%90%EC%8B%9C%EA%B3%84.jpg" alt="메릴린치투자시계"></p>
 <ul>
 <li>상품시장 수익률은 디플레이션 초기와 후기 모두 안 좋다</li>
 <li>채권은 경기침체 초기에는 채권 수요 증가, 후기에는 감소, 고수익 추가하면서,,,</li>
@@ -252,6 +252,68 @@
 <p>185 월셔5000 : 지수를 M2로 나눔</p>
 <p>191 금융에 투자하는 사람들은 자산을 지켜낼 수 있겠지만 월급에만 의존해 살아가는 노동자는 점점 빈부격차가 커지면서 하층으로 밀려나게 될 것이다</p>
 <p>193 지금처럼 돈을 헬리콥터로 뿌리는 경제하에서 인플레이션으로 나의 소득이 줄어들지 않으려면 인플레이션을 헤지하는 금융자산을 갖고 있어야 한다</p>
+<br>
+<h2 id="04-중국을-알면-시대흐름-파악이-쉽다"><strong>04. 중국을 알면 시대흐름 파악이 쉽다</strong></h2>
+<p>199 20년간 고속 성장. 세계의 공장 역할. 전세계의 제조업이 중국으로 몰려갔다</p>
+<p>201 마오쩌둥(공부론)</p>
+<ul>
+<li>1949년 내전 승리</li>
+<li>호루시초크 미국과 우호적 관계 맺으러 함. 자력갱생 전략을 앞세워 대약진 운동 전개. 대실패</li>
+<li>문화대혁명도 중국경제에 악영향</li>
+</ul>
+<p>201 덩샤오핑(선부론)</p>
+<ul>
+<li>겨핵과 개방(1978). 흑묘백묘론</li>
+<li>이념적인 논쟁은 시기를 놓칠 수 있다</li>
+<li>인민공사체재 생산성 그대로. 농촌단위 도급제 10~20%. 농가단위 도급제 30~50% 생산성 증가</li>
+</ul>
+<p>205 (빈부격차 확대) 지니계수가 0.5 이상이면 폭동 발생 가능. 2022년 0.7에 근접함</p>
+<p>208 시진핑(공동부유론)</p>
+<ul>
+<li>지역간. 소득계급 간 빈부격차 줄이는 것</li>
+<li>파이 나누기도 함께 진행한다는 점</li>
+</ul>
+<p>210 연소득 2만5천 이상이 1억명 이상 vs 월소득 1천위안(17만원) 이하 6억명</p>
+<p>211 자산가격거품 : 10년 이상의 노동의 결실은 소수의 주머니로 들어가고 대부분의 국민들은 10년의 소비력을 잃는다</p>
+<p>212 한 국가의 경제는 초기에는 투자에 의존하지만 장기로 갈수록 소비에 의존한다</p>
+<p>214 중저소득층의 소득증가속도가 높아져야만 중국 소비가 늘어날 수 있다 : 일반적으로 소득이 낮을수록 한계소비 성향이 높고 소비여력이 작다</p>
+<p>215 1차분배(임금) - 2차분배(세금) - 3차분배(기부) : 부동산세 도입을 10년째 못하고 있다</p>
+<p>217 M2 확장속도 장기적으로 두 자릿수</p>
+<ul>
+<li>금융과 부동산 영역의 시장 참여자들이 다른 산업 종사자들보다 월등히 높은 소득 가져감</li>
+<li>2020년 기준 38개 상장은행 이익이 전체 A주 상장이익의 42%</li>
+</ul>
+<p>220 부동산세 도입은 집값을 잡기 위한 것이 아닌 날로 벌어지는 빈부격차 문제를 억제하기 위해 필요</p>
+<p>224 1978년 개혁개발 이후 2018년까지 40년 동안 중국의 GDP는 150배 증가했지만 통화량은 1500배 증가했다</p>
+<ul>
+<li>부동산이 넘치는 유동성을 묶어 두는 역할</li>
+</ul>
+<p>225 가계 자산의 77.7%. 집값이 하락하면 중국 가계의 부가 크게 줄어든다. 가계자산 대부분이 부동산에 묶인 탓에 소비하는데 자금여력이 없다</p>
+<p>227 부채율은 전반적으로 건실하지만 자산의 유동성이 떨어지는 등 유동성 리스크가 어느 정도 있다</p>
+<p>230 기관 투자자의 낲은 참여도는 중국 주식시장이 개미투자자 시장과 정책시의 악성 순환이 이어지도록 한다</p>
+<p>231 시진핑의 3연임. 중국식 현대화 건설 (5가지)</p>
+<ul>
+<li>거대한 인구 규모의 현대화 : 14억명. 선진국 발전 경로를 적용하기 힘듦. 노동력과 내수시장 쌍순환</li>
+<li>전체 인민 공동부유의 현대화</li>
+<li>물질문명과 전신문명이 상호 조화를 이루는 현대화 : 문화산업</li>
+<li>사람과 자연이 조화롭게 공생하는 현대화 : 탄소배출권. 전기차</li>
+<li>평화발전의 길을 걷는 현대화 : 미국의 공급망 안전과 자국 우선주의 vs 세계화</li>
+</ul>
+<p>240 국제통화기금에서 제시한 세계화 기준(2000년)</p>
+<ul>
+<li>자유로운 무역과 거래 / 자본과 투자 / 사람들의 이주와 이동 / 지식의 보급</li>
+</ul>
+<p>240 무역확장법 (1962) : 다른 나라와 대규모 관세 인하를 협정할 수 있는 기초 제시 (케네디 라운드)</p>
+<p>242 미국, 독일, 일본 중심 (1995)  vs  아시아 지역은 중국으로 대체 (2014)</p>
+<p>247 31개 성 : 당서기, 성장  vs  시진핑 총서기와 총리</p>
+<p>247 덩샤오핑 1992. 사회주의 시장경제. 자본주의에도 계획이 있고 사회주의도 시장이 있을 수 있다</p>
+<p>249 정부 주도 성장 (한국, 중국, 싱가포르) : 유교 문화권 vs 아르헨티나/아프리카 국가 (경제 발전 걸림돌)</p>
+<p>250 시장에 의해 평가 (주가)  vs  중앙정부에 의한 평가 (승진, 경제적 보상)</p>
+<p>254 적정집값 : PIR(최고수준 29년), 임대수익률(512개월, 300보다 높으면 버블 가능성)</p>
+<p>261 중국 1998. 생산과잉. 도시화와 해외 수출로 돌파 (부동산 복지 정책 중단. 시장에서 주택 구입토록 함)</p>
+<p>263 중국 2008. 정부임대주택 / 농촌 인프라시설 투자 / 철도.도로.공항 (은행 대출)</p>
+<p>266 2016 공급측 개혁 실시</p>
+<p>268 자본시장에서 기업들이 충분한 자금을 조달할 수 있도록 규제를 완화하고 중국 주민들의 자본시장 투자도 활성화하는 방향으로 리스크를 분산하는 것이다</p>
 
             
             
