--- a/MY_PGMB/my_독서.html
+++ b/MY_PGMB/my_독서.html
@@ -8,6 +8,10 @@
     <header> 
 <h2>독서</h2>
 </header>
+<br>
+<h4>2024년</h4>
+<p><a href="../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다
+</a></p>
 <p><a href="../book/book_0132.html">132. 더 플로
 </a></p>
 <p><a href="../book/book_0131.html">131. 격차사회
@@ -16,6 +20,8 @@
 </a></p>
 <p><a href="../book/book_0129.html">129. AI시대의 고등교육
 </a></p>
+<br>
+<h4>2023년5월이후</h4>
 <p><a href="../book/book_0128.html">128. 10대를 위한 공정하다는 착각
 </a></p>
 <p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들
@@ -41,7 +47,7 @@
 <p><a href="../book/book_0117.html">117. 너는 사람들을 도와주며 살고 싶니?
 </a></p>
 <br>
-<h4>기존(2022.04 이전)</h4>
+<h4>기존(2023.04 이전)</h4>
 <p><a href="../book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)
 </a></p>
 <p><a href="../book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기
