--- a/MY_PGMB/my_2024년 독서 _ 도서관에서 빌린 책 1권 유지.html
+++ b/MY_PGMB/my_2024년 독서 _ 도서관에서 빌린 책 1권 유지.html
@@ -8,6 +8,8 @@
     <header> 
 <h2>2024년 독서 _ 도서관에서 빌린 책 1권 유지</h2>
 </header>
+<p><a href="../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다
+</a></p>
 <p><a href="../book/book_0132.html">132. 더 플로
 </a></p>
 <p><a href="../book/book_0131.html">131. 격차사회
