--- a/MY_PGMB/my_python.html
+++ b/MY_PGMB/my_python.html
@@ -52,6 +52,8 @@
 </a></p>
 <p><a href="./contensts/A0000023.pdf">A0000023. Pandas
 </a></p>
+<p><a href="./contensts/A0000025.pdf">A0000025. Matplotlib
+</a></p>
 <p><a href="../study/study_0071.html">파이썬 수강
 </a></p>
 <p><a href="../study/study_0072.html">비전공자를 위한 첫 코딩 챌린지
