--- a/MY_PGMB/py/index.html
+++ b/MY_PGMB/py/index.html
@@ -5,22 +5,27 @@
     <title>MY PGM BLOG</title>
 </head>
 <body>
-    <header> 
+<br><h4>기본 컴퓨터 </h4>
 <p><a href="../my_Office.html">Office</a></p>
+<br><h4>개발언어 </h4>
 <p><a href="../my_python.html">python</a></p>
-<p><a href="../my_차이나는 클라스.html">차이나는 클라스</a></p>
-<p><a href="../my_독서_심리학.html">독서_심리학</a></p>
-<p><a href="../my_독서_시.html">독서_시</a></p>
-<p><a href="../my_빅데이터_기초.html">빅데이터_기초</a></p>
-<p><a href="../my_삶과 죽음.html">삶과 죽음</a></p>
-<p><a href="../my_2024년 독서 _ 도서관에서 빌린 책 1권 유지.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
-<p><a href="../my_2023년 독서 _ 5월이후 (13권).html">2023년 독서 _ 5월이후 (13권)</a></p>
-<p><a href="../my_독서.html">독서</a></p>
-<p><a href="../my_DASP.html">DASP</a></p>
-<p><a href="../my_SW자산관리사(C-SAM).html">SW자산관리사(C-SAM)</a></p>
 <p><a href="../my_HTML_CSS.html">HTML_CSS</a></p>
 <p><a href="../my_Github.html">Github</a></p>
+<br><h4>빅데이터_AI </h4>
+<p><a href="../my_빅데이터_기초.html">빅데이터_기초</a></p>
 <p><a href="../my_빅데이터_R.html">빅데이터_R</a></p>
 <p><a href="../my_4차산업혁명.html">4차산업혁명</a></p>
+<br><h4>책을 읽어요</h4>
+<p><a href="../my_2024년 독서 _ 도서관에서 빌린 책 1권 유지.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
+<p><a href="../my_독서_심리학.html">독서_심리학</a></p>
+<p><a href="../my_독서_시.html">독서_시</a></p>
+<p><a href="../my_삶과 죽음.html">삶과 죽음</a></p>
+<p><a href="../my_2023년 독서 _ 5월이후 (13권).html">2023년 독서 _ 5월이후 (13권)</a></p>
+<p><a href="../my_독서.html">독서</a></p>
+<br><h4>자격증</h4>
+<p><a href="../my_DASP.html">DASP</a></p>
+<p><a href="../my_SW자산관리사(C-SAM).html">SW자산관리사(C-SAM)</a></p>
+<br><h4>상식</h4>
+<p><a href="../my_차이나는 클라스.html">차이나는 클라스</a></p>
 </body>
 </html>
