--- a/MY_PGMB/py/11.html
+++ b/MY_PGMB/py/11.html
@@ -6,5 +6,32 @@
 </head>
 <body>
 <p><a href=".././conhtml/mpb_0001.html">인공지능의 역사</a></p>
+<p><a href=".././conhtml/mpb_0002.html">인공지능의 요소기술</a></p>
+<p><a href="../contensts/A0000001.pdf">A0000001. 파이썬 프로그래밍 기초</a></p>
+<p><a href="../contensts/A0000002.pdf">A0000002. 변수 및 연산자</a></p>
+<p><a href="../contensts/A0000003.pdf">A0000003. 데이터타입</a></p>
+<p><a href="../contensts/A0000004.pdf">A0000004. 기본제어구조(선택 및 반복)</a></p>
+<p><a href="../contensts/A0000006.pdf">A0000006. 리스트</a></p>
+<p><a href="../contensts/A0000007.pdf">A0000007. 튜플 / 딕셔너리</a></p>
+<p><a href="../contensts/A0000008.pdf">A0000008. 함수 1</a></p>
+<p><a href="../contensts/A0000009.pdf">A0000009. 함수 2</a></p>
+<p><a href="../contensts/A0000011.pdf">A0000011. 모듈_패키지</a></p>
+<p><a href="../contensts/A0000012.pdf">A0000012. tkinter 1</a></p>
+<p><a href="../contensts/A0000014.pdf">A0000014. tkinter 2 (미작성)</a></p>
+<p><a href="../contensts/A0000016.pdf">A0000016. 파일 1</a></p>
+<p><a href="../contensts/A0000017.pdf">A0000017. 파일 2</a></p>
+<p><a href="../contensts/A0000018.pdf">A0000018. 객체지향 1</a></p>
+<p><a href="../contensts/A0000019.pdf">A0000019. 객체지향 2</a></p>
+<p><a href="../contensts/A0000020.pdf">A0000020. 객체지향 3</a></p>
+<p><a href="../contensts/A0000015.pdf">A0000015. 인공지능 기초</a></p>
+<p><a href="../contensts/A0000021.pdf">A0000021. Numpy 1</a></p>
+<p><a href="../contensts/A0000022.pdf">A0000022. Numpy 2</a></p>
+<p><a href="../contensts/A0000023.pdf">A0000023. Pandas</a></p>
+<p><a href="../contensts/A0000025.pdf">A0000025. Matplotlib</a></p>
+<p><a href="../../study/study_0071.html">파이썬 수강</a></p>
+<p><a href="../../study/study_0072.html">비전공자를 위한 첫 코딩 챌린지</a></p>
+<p><a href="../contensts/A0000005.pdf">A0000005. 주요 함수</a></p>
+<p><a href="../contensts/A0000010.pdf">A0000010. 주의사항</a></p>
+<p><a href="../contensts/A0000013.pdf">A0000013. DeBug</a></p>
 </body>
 </html>
