--- a/MY_PGMB/py/index.html
+++ b/MY_PGMB/py/index.html
@@ -19,6 +19,7 @@
 <p><a href="./17.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
 <p><a href="./13.html">독서_심리학</a></p>
 <p><a href="./14.html">독서_시</a></p>
+<p><a href="./26.html">독서_그림</a></p>
 <p><a href="./16.html">삶과 죽음</a></p>
 <p><a href="./18.html">2023년 독서 _ 5월이후 (13권)</a></p>
 <p><a href="./19.html">독서</a></p>
