--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     
         <p> <a href="./MY_PGMB/py/my_schedule_output.txt">MY Schedule</a> </p>
         <br>
+        <p> <a href="./MY_PGMB/py/my_schedule_output2.html">MY Test Schedule</a> </p>
+        <br>
     
         <p> <a href="./MY_PGMB/index.html">MY PGM BLOG</a> </p>
         <br>
