--- a/MY_PGMB/py/my_schedule_output.html
+++ b/MY_PGMB/py/my_schedule_output.html
@@ -23,11 +23,11 @@
         <th style="width:40%; border: 1px solid black;">Memo</th>
         <th style="width:30%; border: 1px solid black;">CycleMemo</th>
     </tr>
-  <tr><td style="border: 1px solid black;">2024-06-14</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-16</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">W</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-20</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">가정의학과(예약)</td><td style="border: 1px solid black;">This Year</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-23</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">W</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+  <tr><td style="border: 1px solid black;">2024-06-20</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">가정의학과(예약)</td><td style="border: 1px solid black;">This Year</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-23</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">W</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-24</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">만기2낙원</td><td style="border: 1px solid black;">This Year</td></tr>
 <tr><td style="border: 1px solid black;">2024-06-28</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">이체(24.1.10,25.3.16,28.1.3,나머지250)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-30</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">W</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
 
     <tr>
         <th colspan="5">다음달(2024-07) 일정</th>
@@ -43,7 +43,7 @@
 <tr><td style="border: 1px solid black;">2024-07-04</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">GAS(격월10일)</td><td style="border: 1px solid black;">This Month</td></tr>
 <tr><td style="border: 1px solid black;">2024-07-09</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">치과 18시 (8.23)</td><td style="border: 1px solid black;">This Year</td></tr>
 <tr><td style="border: 1px solid black;">2024-07-13</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-14</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-14</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">This Month</td></tr>
 <tr><td style="border: 1px solid black;">2024-07-19</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">This Year</td></tr>
 <tr><td style="border: 1px solid black;">2024-07-28</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">이체(24.1.10,25.3.16,28.1.3,나머지250)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
 
