--- a/MY_PGMB/py/my_schedule_output2.html
+++ b/MY_PGMB/py/my_schedule_output2.html
@@ -7,40 +7,42 @@
     <style>
         table { width: 100%; border-collapse: collapse; }
         th, td { border: 1px solid black; text-align: center; }
-        th[colspan="5"] { text-align: center; }
+        th[colspan="5"] { text-align: center; color: red;}
     </style>
 </head>
 <body>
-<table>
+  <table>
+
     <tr>
         <th colspan="5">이번달(2024-06) 일정</th>
     </tr>
     <tr>
-        <th style="width:20%; border: 1px solid black;">Date</th>
-        <th style="width:10%; border: 1px solid black;">Num</th>
-        <th style="width:10%; border: 1px solid black;">Cycle</th>
-        <th style="width:20%; border: 1px solid black;">Memo</th>
-        <th style="width:40%; border: 1px solid black;">CycleMemo</th>
-    </tr>
-<tr><td style="border: 1px solid black;">2024-06-13 00:00:00</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-16 00:00:00</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">W</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-23 00:00:00</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">W</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+    <th style="width:14%; border: 1px solid black;">Date</th>
+<th style="width:5%; border: 1px solid black;">Num</th>
+<th style="width:11%; border: 1px solid black;">Cycle</th>
+<th style="width:40%; border: 1px solid black;">Memo</th>
+<th style="width:30%; border: 1px solid black;">CycleMemo</th>
+</tr>
+<tr><td style="border: 1px solid black;">2024-06-13</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-16</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-23</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
 
     <tr>
         <th colspan="5">다음달(2024-07) 일정</th>
     </tr>
     <tr>
-        <th style="width:20%; border: 1px solid black;">Date</th>
-        <th style="width:10%; border: 1px solid black;">Num</th>
-        <th style="width:10%; border: 1px solid black;">Cycle</th>
-        <th style="width:20%; border: 1px solid black;">Memo</th>
-        <th style="width:40%; border: 1px solid black;">CycleMemo</th>
-    </tr>
-<tr><td style="border: 1px solid black;">2024-07-04 00:00:00</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-09 00:00:00</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;">This Year</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-09 00:00:00</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;">This Year</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-13 00:00:00</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">M</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
+    <th style="width:14%; border: 1px solid black;">Date</th>
+<th style="width:5%; border: 1px solid black;">Num</th>
+<th style="width:11%; border: 1px solid black;">Cycle</th>
+<th style="width:40%; border: 1px solid black;">Memo</th>
+<th style="width:30%; border: 1px solid black;">CycleMemo</th>
+</tr>
+<tr><td style="border: 1px solid black;">2024-07-04</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-09</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
+<tr><td style="border: 1px solid black;">2024-07-09</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Irregular</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
+<tr><td style="border: 1px solid black;">2024-07-13</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
 
-</table>
-</body>
-</html>
+  </table>
+  </body>
+  </html>
+  
