--- a/MY_PGMB/py/13.html
+++ b/MY_PGMB/py/13.html
@@ -13,5 +13,7 @@
 <p><a href="../../book/book_0027.html">027. 욱하는 성질 죽이기</a></p>
 <p><a href="../../book/book_0026.html">026. 백곰 심리학</a></p>
 <p><a href="../../book/book_0019.html">019. 가족의 두 얼굴</a></p>
+<p><a href="../../book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a></p>
+<p><a href="../../book/book_0051.html">051. 행복도 선택이다</a></p>
 </body>
 </html>
