--- a/MY_PGMB/py/index.html
+++ b/MY_PGMB/py/index.html
@@ -8,6 +8,7 @@
 <br><h4>기본 컴퓨터 </h4>
 <p><a href="./10.html">Office</a></p>
 <br><h4>개발언어 </h4>
+<p><a href="./27.html">MY python Source</a></p>
 <p><a href="./11.html">python</a></p>
 <p><a href="./22.html">HTML_CSS</a></p>
 <p><a href="./23.html">Github</a></p>
