--- a/MY_PGMB/py/27.html
+++ b/MY_PGMB/py/27.html
@@ -5,6 +5,6 @@
     <title>MY PGM BLOG</title>
 </head>
 <body>
-<p><a href=".././conhtml/my_pysource.html">MY Python Source</a></p>
+<p><a href=".././pyhtml/my_pysource.html">MY Python Source</a></p>
 </body>
 </html>
