--- a/MY_PGMB/pyhtml/my_pgmb_v2.html
+++ b/MY_PGMB/pyhtml/my_pgmb_v2.html
@@ -71,11 +71,11 @@ fmyindex.writelines(fi_index_lines)
 # 2. 본문 쓰기
 for n_row in range(df_shape[0]):                    # 1줄씩 읽으려고 함
   if df.loc[n_row,"Key"] == "0":
-    fmyindex.write("<br><h4>" + df.loc[n_row,"Name"] + "</h4>\n")
+    fmyindex.write("&lt;br&gt;&lt;h4&gt;" + df.loc[n_row,"Name"] + "&lt;/h4&gt;\n")
   else:
-    fmyindex.write("<p><a href=\"./" + df.loc[n_row,"Key"] + ".html\"" + ">" + df.loc[n_row,"Name"] + "</a></p>\n")
-# 3. 파일 마무리 & 닫기
-fmyindex.write("</body>\n</html>\n") # 파일 끝 저장 : 마지막 파일
+    fmyindex.write("&lt;p&gt;&lt;a href=\"./" + df.loc[n_row,"Key"] + ".html\"" + "&gt;" + df.loc[n_row,"Name"] + "&lt;/a&gt;&lt;/p&gt;\n")
+# 3. 파일 마무리 &amp; 닫기
+fmyindex.write("&lt;/body&gt;\n&lt;/html&gt;\n") # 파일 끝 저장 : 마지막 파일
 fmyindex.close()
 ### END OF File Index
 
@@ -90,30 +90,30 @@ for n_row in range(dc_shape[0]):                    # 1줄씩 읽으려고 함
   if n_row == 0  or  dc.loc[n_row,"gKey"] != my_gKey:
     # CLOSE Previous contents
     if n_row != 0:  
-      fw.write("</body>\n</html>\n") 
+      fw.write("&lt;/body&gt;\n&lt;/html&gt;\n") 
       fw.close()
-    # NEW Open & Write Init
+    # NEW Open &amp; Write Init
     fw = open(my_dir + "/" + dc.loc[n_row,"gKey"] + ".html", 'w', encoding='utf-8')
     fw.writelines(fi_index_lines)
     my_gKey = dc.loc[n_row,"gKey"]
     fw_cnt += 1
   # 2.2 현재 파일 본문 쓰기
   # HTML URL인 경우 : ".html"로 끝나는 경우
-  if dc.loc[n_row,"Key"].find(".html") >= 0:
-    fw.write("<p><a href=\"" + "../" + dc.loc[n_row,"Key"] + "\">" + dc.loc[n_row,"Name"] +"</a></p>\n")    
+  if dc.loc[n_row,"Key"].find(".html") &gt;= 0:
+    fw.write("&lt;p&gt;&lt;a href=\"" + "../" + dc.loc[n_row,"Key"] + "\"&gt;" + dc.loc[n_row,"Name"] +"&lt;/a&gt;&lt;/p&gt;\n")    
   # 2. 중간 제목인 경우 : "T"로 시작하는 경우 (T 제외하게 출력함)            
   elif dc.loc[n_row,"Key"][0] == 'T':
-    fw.write("<br>\n<h4>" + dc.loc[n_row,"Key"][1:] + "</h4>\n")                
+    fw.write("&lt;br&gt;\n&lt;h4&gt;" + dc.loc[n_row,"Key"][1:] + "&lt;/h4&gt;\n")                
   # 3. 나머지는 PDF 파일로 생각함
   else:
-    fw.write("<p><a href=\"../contensts/" + dc.loc[n_row,"Key"] + ".pdf\">" + dc.loc[n_row,"Key"] + ". " + dc.loc[n_row,"Name"] +"</a></p>\n")  # PDF URL
+    fw.write("&lt;p&gt;&lt;a href=\"../contensts/" + dc.loc[n_row,"Key"] + ".pdf\"&gt;" + dc.loc[n_row,"Key"] + ". " + dc.loc[n_row,"Name"] +"&lt;/a&gt;&lt;/p&gt;\n")  # PDF URL
 
   # 2.3 (임시) 두번째 파일 첫번째 내용 적고 빠져 나오기
   # if fw_cnt == 2:
   #   break
 
-# 3. 마지막 파일 마무리 & 닫기
-fw.write("</body>\n</html>\n") # 파일 끝 저장 : 마지막 파일
+# 3. 마지막 파일 마무리 &amp; 닫기
+fw.write("&lt;/body&gt;\n&lt;/html&gt;\n") # 파일 끝 저장 : 마지막 파일
 fw.close()
 ### EDN OF File Index
   </pre>
