--- a/MY_PGMB/pyhtml/my_schedule_now.html
+++ b/MY_PGMB/pyhtml/my_schedule_now.html
@@ -27,7 +27,7 @@ print(my_lhome,my_src_file)
 #sys.exit()
 
 os = os.name
-# REAL & NOT Home (여기서는 안돼요)
+# REAL &amp; NOT Home (여기서는 안돼요)
 if (__istest__==False) and (os!="nt") :
   print("-"*50)
   print("Not Allowed : Real Mode")
@@ -77,7 +77,7 @@ class DataFrameApp:
 
         self.tree.pack(fill=tk.BOTH, expand=True)
 
-        self.tree.bind("<ButtonRelease-1>", self.on_row_click)
+        self.tree.bind("&lt;ButtonRelease-1&gt;", self.on_row_click)
 
         self.info_frame = tk.Frame(self.frame)
         self.info_frame.pack(fill=tk.X, expand=True)
@@ -144,7 +144,7 @@ dfy = dfy.copy()
 
 # 연간 플랜 수립
 def update_year(row):
-  if row['Date'] >= today:
+  if row['Date'] &gt;= today:
     return row['Date'], "This Year"
   else:
     return row['Date'] + relativedelta(years=row['Num']), "Next " + str(row['Num']) + " Year(s)"
@@ -228,7 +228,7 @@ print(df)
 
 
 # WOW 240620_mapping : pandas 기능. 간단하게 매핑에 유용하게 활용, apply 함수는 복잡한 경우 활용
-# Define & Apply the mapping
+# Define &amp; Apply the mapping
 cycle_mapping = {
     "W": "Weekly",
     "M": "Monthly",
@@ -242,7 +242,7 @@ df["Cycle"] = df["Cycle"].map(cycle_mapping)
 
 
 
-# 제목 설정 : 현재 모드 출력 : Test & Not Test
+# 제목 설정 : 현재 모드 출력 : Test &amp; Not Test
 if __istest__ :
   title = "일정관리 (Test Mode)"
 else :
@@ -253,41 +253,41 @@ else :
 
 # Warning 
 title_0 = "Warning"
-df_0 = df[ df['Date'] < today ].copy()
+df_0 = df[ df['Date'] &lt; today ].copy()
 df_0['Date'] = df_0['Date'].dt.strftime('%Y-%m-%d')
 
 # This Month
 title_1 = "이번달(" + today.strftime('%Y-%m') + ") 일정"
-df_1 = df[ (df['Date'].dt.year == today.year) & (df['Date'].dt.month == today.month) ].copy()
+df_1 = df[ (df['Date'].dt.year == today.year) &amp; (df['Date'].dt.month == today.month) ].copy()
 df_1['Date'] = df_1['Date'].dt.strftime('%Y-%m-%d')
 
 # Next Month
 nextm_day = today + relativedelta(months=1)
 title_2 = "다음달(" + nextm_day.strftime('%Y-%m') + ") 일정"
-df_2 = df[ (df['Date'].dt.year == nextm_day.year) & (df['Date'].dt.month == nextm_day.month) ].copy()
+df_2 = df[ (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month == nextm_day.month) ].copy()
 df_2['Date'] = df_2['Date'].dt.strftime('%Y-%m-%d')
 
 # 이후 일정
 title_3 = "이후 일정"
-df_3 = df[ (df['Date'].dt.year > nextm_day.year)  |  (df['Date'].dt.year == nextm_day.year) & (df['Date'].dt.month > nextm_day.month) ].sort_values(by=["Date"], ascending=[True]).copy()
+df_3 = df[ (df['Date'].dt.year &gt; nextm_day.year)  |  (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month &gt; nextm_day.month) ].sort_values(by=["Date"], ascending=[True]).copy()
 df_3['Date'] = df_3['Date'].dt.strftime('%Y-%m-%d')
 
 # HTML로 변환
 def gen_title(title):
   return f"""
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>{title}</title>
-    <style>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="ko"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;title&gt;{title}&lt;/title&gt;
+    &lt;style&gt;
         table {{ width: 100%; border-collapse: collapse; }}
         th, td {{ border: 1px solid black; text-align: center; }}
         th[colspan="5"] {{ text-align: center; color: red;}}
-    </style>
-</head>
-<body>
-  <table>
+    &lt;/style&gt;
+&lt;/head&gt;
+&lt;body&gt;
+  &lt;table&gt;
 """
 
 ### WOW NOT colspan 5
@@ -297,33 +297,33 @@ def gen_title(title):
 ### zip : zip 함수를 사용하여 간결하게 표현, 리스트를 묶어서 처리
 def gen_table(title, df, col_width):
   html = f"""
-    <tr>
-        <th colspan="5">{title}</th>
-    </tr>
-    <tr>
+    &lt;tr&gt;
+        &lt;th colspan="5"&gt;{title}&lt;/th&gt;
+    &lt;/tr&gt;
+    &lt;tr&gt;
     """
 ### WOW.240619 f-string, zip : END
 
   for width, col in zip(col_width, df.columns):
-    html += f'<th style="width:{width}%; border: 1px solid black;">{col}</th>\n'
+    html += f'&lt;th style="width:{width}%; border: 1px solid black;"&gt;{col}&lt;/th&gt;\n'
 
-  html +=  "</tr>\n"
+  html +=  "&lt;/tr&gt;\n"
 
   # 데이터 행 추가
   for row in df.itertuples(index=False):
-      html += "<tr>"
+      html += "&lt;tr&gt;"
       for value in row:
-          html += f'<td style="border: 1px solid black;">{value}</td>'
-      html += "</tr>\n"
+          html += f'&lt;td style="border: 1px solid black;"&gt;{value}&lt;/td&gt;'
+      html += "&lt;/tr&gt;\n"
 
   return html
 
 
 def gen_tail():
   return f"""
-  </table>
-  </body>
-  </html>
+  &lt;/table&gt;
+  &lt;/body&gt;
+  &lt;/html&gt;
   """
 
 # 열 넓이 비율
@@ -333,7 +333,7 @@ col_width = [14,5,11,40,30]
 html = gen_title(title)
 # Warning (선택)
 if (__istest__==True) and (os=="nt"):
-  if not df[ df['Date'] < today ].empty:
+  if not df[ df['Date'] &lt; today ].empty:
     html += gen_table(title_0, df_0, col_width)
 # 당월 (필수)
 html += gen_table(title_1, df_1, col_width)
@@ -354,6 +354,6 @@ with open(my_desc_dir + my_desc_file, "w", encoding="utf-8") as file:
 
 # 24.06.18 잠시 이 기능은 막습니다. tkinter로 df 표출, 변경, 저장
 # 데이터프레임 GUI 화면 출력
-# show_df_window( df[ (df['Date'].dt.year == nextm_day.year) & (df['Date'].dt.month == nextm_day.month) ])  </pre>
+# show_df_window( df[ (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month == nextm_day.month) ])  </pre>
 </body>
 </html>
