--- a/book/book_0134.html
+++ b/book/book_0134.html
@@ -161,7 +161,7 @@
 <ul>
 <li>공화국 : 시민들 참여 정치 (귀족 또는 시민 계층) : 귀족, 상류계츰, 부유한 상인계층</li>
 <li>왕국 : 왕이 다스림</li>
-<li>공국 : 귀족이 대스림, 왕국에 비해 권한 제한적</li>
+<li>공국 : 귀족이 다스림, 왕국에 비해 권한 제한적</li>
 </ul>
 <p>036 르네상스 미술 4가지 특징</p>
 <ul>
@@ -189,12 +189,12 @@
 <li>서른쯤에 밀라노에서 군사 기술자이자 건축가로 일하며 17년간 머물렀는데 이때 다양한 분야 접함</li>
 <li>시대의 천재였지만 끈기가 부족하여 시작을 해놓고 마무리된 게 많지 않았다</li>
 <li>모니리자 : 르네상스 시대의 네 가지 혁신을 모두 갖춘 그림 (프랑스 르부르 박물관)</li>
-<li>최후의 만찬 : 원근법 사용 예수님 부각, 3개의 창문, 작품 훼손이 많이됨</li>
+<li>최후의 만찬 : 원근법 사용 예수님 부각, 3개의 창문, 작품 훼손이 많이됨(템페라기법), 현재 복원된 것이 원본과 많이 다르다는 얘기가 있음, 르네상스 시대의 식탁 풍경임 (산타 마리아 델레 그라치아 성당, 예약하기 힘듦)</li>
 </ul>
 <p>044 미켈란젤로 부오나로티(이탈리아, 1475~1564)</p>
 <ul>
 <li>천재적인 재능과 차원이 다른 노력, 장수, 많은 작품 남김</li>
-<li>피렌체, 귀존의 후손, 부모님이 미술 반대했지만,,,</li>
+<li>피렌체, 귀족의 후손, 부모님이 미술 반대했지만,,,</li>
 <li>메디치가문에 고용되었지만, 메디치가문이 피렌체이서 2년만에 추방됨</li>
 <li>피에타(조각상) : 교황의 요청으로 24세에 만듦, 정면 성모, 하느님의 시각에서는 예수님만 보임, 완전히 다른 구도가 보임</li>
 <li>천장화 (시스티나 대성당) (천지창조)
