--- a/MY_PGMB/pyhtml/my_pysource.html
+++ b/MY_PGMB/pyhtml/my_pysource.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<p><a href="../pyhtml/my_schedule_now.html">일정관리</a></p>
-<p><a href="../pyhtml/my_pgmb_v2.html">블로그만들기</a></p>
-<p><a href="../pyhtml/my_py_html.html">소스보기</a></p>
+<p><a href="../pyhtml/my2_schedule_now.html">일정관리</a></p>
+<p><a href="../pyhtml/my1_pgmb_v2.html">블로그만들기</a></p>
+<p><a href="../pyhtml/my3_py_html.html">소스보기</a></p>
 
 </body>
 </html>
