--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p> <a href="https://openai.com/blog/chatgpt/">챗GPT</a> </p>
         <br>
          
-        <p> <a href="./MY_PGMB/py/index.html">MY PGM BLOG 2</a> </p>
+        <p> <a href="./MY_PGMB/pyhtml/index.html">MY PGM BLOG 2</a> </p>
         <br>
     
         <p> <a href="./MY_PGMB/pyhtml/my_schedule_output.html">MY Schedule</a> </p>
