--- a/MY_PGMB/pyhtml/my_schedule_output2.html
+++ b/MY_PGMB/pyhtml/my_schedule_output2.html
@@ -23,9 +23,9 @@
 <th style="width:40%; border: 1px solid black;">Memo</th>
 <th style="width:30%; border: 1px solid black;">CycleMemo</th>
 </tr>
-<tr><td style="border: 1px solid black;">2024-06-13</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-16</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-23</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-13(목)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-16(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-23(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
 
     <tr>
         <th colspan="5">다음달(2024-07) 일정</th>
@@ -37,10 +37,10 @@
 <th style="width:40%; border: 1px solid black;">Memo</th>
 <th style="width:30%; border: 1px solid black;">CycleMemo</th>
 </tr>
-<tr><td style="border: 1px solid black;">2024-07-04</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-09</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
-<tr><td style="border: 1px solid black;">2024-07-09</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Irregular</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
-<tr><td style="border: 1px solid black;">2024-07-13</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-04(목)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
+<tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Irregular</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
+<tr><td style="border: 1px solid black;">2024-07-13(토)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
 
   </table>
   </body>
