--- a/MY_PGMB/pyhtml/my2_schedule_now.html
+++ b/MY_PGMB/pyhtml/my2_schedule_now.html
@@ -7,12 +7,20 @@
 </head>
 <body>
 
-  <pre># 보완 필요사항
-# WOW NOT : LUNAR
-# WOW NOT : 소스 별도 보관 : 소스, 인풋, 아웃풋
-# WOW NOT : 실적 파일 별도 관리 (아웃품과 또 다른)
-# WOW NOT : HTML 파일 이쁘게 만들기
-# WOW NOT : PRE 태그를 활용한 파이썬 소스 보여주기
+  <pre>
+# 보완 필요사항
+</pre>
+<span style="color:red;"># WOW NOT : LUNAR
+</span>
+<pre>
+</pre>
+<span style="color:red;"># WOW NOT : 소스 별도 보관 : 소스, 인풋, 아웃풋
+</span>
+<pre>
+</pre>
+<span style="color:red;"># WOW NOT : 실적 파일 별도 관리 (아웃품과 또 다른)
+</span>
+<pre>
 
 __istest__ = True
 
@@ -227,7 +235,10 @@ print("Total Plan")
 print(df)
 
 
-# WOW 240620_mapping : pandas 기능. 간단하게 매핑에 유용하게 활용, apply 함수는 복잡한 경우 활용
+</pre>
+<span style="color:red;"># WOW 240620_mapping : pandas 기능. 간단하게 매핑에 유용하게 활용, apply 함수는 복잡한 경우 활용
+</span>
+<pre>
 # Define &amp; Apply the mapping
 cycle_mapping = {
     "W": "Weekly",
@@ -238,7 +249,10 @@ cycle_mapping = {
 }
 
 df["Cycle"] = df["Cycle"].map(cycle_mapping)
-# WOW 240620_mapping : END
+</pre>
+<span style="color:red;"># WOW 240620_mapping : END
+</span>
+<pre>
 
 
 
@@ -254,23 +268,35 @@ else :
 # Warning 
 title_0 = "Warning"
 df_0 = df[ df['Date'] &lt; today ].copy()
-df_0['Date'] = df_0['Date'].dt.strftime('%Y-%m-%d')
+#df_0['Date'] = df_0['Date'].dt.strftime('%Y-%m-%d')
 
 # This Month
 title_1 = "이번달(" + today.strftime('%Y-%m') + ") 일정"
 df_1 = df[ (df['Date'].dt.year == today.year) &amp; (df['Date'].dt.month == today.month) ].copy()
-df_1['Date'] = df_1['Date'].dt.strftime('%Y-%m-%d')
+#df_1['Date'] = df_1['Date'].dt.strftime('%Y-%m-%d')
 
 # Next Month
 nextm_day = today + relativedelta(months=1)
 title_2 = "다음달(" + nextm_day.strftime('%Y-%m') + ") 일정"
 df_2 = df[ (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month == nextm_day.month) ].copy()
-df_2['Date'] = df_2['Date'].dt.strftime('%Y-%m-%d')
+#df_2['Date'] = df_2['Date'].dt.strftime('%Y-%m-%d')
 
 # 이후 일정
 title_3 = "이후 일정"
 df_3 = df[ (df['Date'].dt.year &gt; nextm_day.year)  |  (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month &gt; nextm_day.month) ].sort_values(by=["Date"], ascending=[True]).copy()
-df_3['Date'] = df_3['Date'].dt.strftime('%Y-%m-%d')
+#df_3['Date'] = df_3['Date'].dt.strftime('%Y-%m-%d')
+
+
+day_mapping = {
+    0: '월',
+    1: '화',
+    2: '수',
+    3: '목',
+    4: '금',
+    5: '토',
+    6: '일'
+}
+
 
 # HTML로 변환
 def gen_title(title):
@@ -290,30 +316,67 @@ def gen_title(title):
   &lt;table&gt;
 """
 
-### WOW NOT colspan 5
+</pre>
+<span style="color:red;">### WOW NOT colspan 5
+</span>
+<pre>
 
-### WOW.240619 f-string, zip 
-### f-string : {}를 사용하여 string에 변수 추가하여 만들 수 있는 가능
-### zip : zip 함수를 사용하여 간결하게 표현, 리스트를 묶어서 처리
+</pre>
+<span style="color:red;">### WOW.240619 f-string, zip 
+</span>
+<pre>
+</pre>
+<span style="color:red;">### WOW : f-string : {}를 사용하여 string에 변수 추가하여 만들 수 있는 가능
+</span>
+<pre>
+</pre>
+<span style="color:red;">### WOW : zip : zip 함수를 사용하여 간결하게 표현, 리스트를 묶어서 처리
+</span>
+<pre>
 def gen_table(title, df, col_width):
   html = f"""
     &lt;tr&gt;
-        &lt;th colspan="5"&gt;{title}&lt;/th&gt;
+        &lt;th colspan="{len(df.columns)}"&gt;{title}&lt;/th&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
     """
-### WOW.240619 f-string, zip : END
 
   for width, col in zip(col_width, df.columns):
     html += f'&lt;th style="width:{width}%; border: 1px solid black;"&gt;{col}&lt;/th&gt;\n'
+</pre>
+<span style="color:red;">### WOW.240619 f-string, zip : END
+</span>
+<pre>
 
   html +=  "&lt;/tr&gt;\n"
 
   # 데이터 행 추가
   for row in df.itertuples(index=False):
       html += "&lt;tr&gt;"
-      for value in row:
+
+</pre>
+<span style="color:red;">      # WOW : enumerate, 요일 표시
+</span>
+<pre>
+</pre>
+<span style="color:red;">      # WOW : enumerate : 반복문을 통해 컬렉션(리스트, 튜플 등)의 요소를 순회할 때, 요소와 함께 해당 요소의 인덱스도 동시에 필요할 때 매우 유용
+</span>
+<pre>
+</pre>
+<span style="color:red;">      # WOW : 날짜, 요일 : strftime, weekday / 요일매핑(별도정의) 사용
+</span>
+<pre>
+      for idx, value in enumerate(row):
+        if idx == 0:
+          new_date = value.strftime('%Y-%m-%d')  + f'({day_mapping[value.weekday()]})'
+          html += f'&lt;td style="border: 1px solid black;"&gt;{new_date}&lt;/td&gt;'
+        else:
           html += f'&lt;td style="border: 1px solid black;"&gt;{value}&lt;/td&gt;'
+</pre>
+<span style="color:red;">      # WOW : enumerate, 요일 표시 : END
+</span>
+<pre>
+      
       html += "&lt;/tr&gt;\n"
 
   return html
@@ -355,5 +418,6 @@ with open(my_desc_dir + my_desc_file, "w", encoding="utf-8") as file:
 # 24.06.18 잠시 이 기능은 막습니다. tkinter로 df 표출, 변경, 저장
 # 데이터프레임 GUI 화면 출력
 # show_df_window( df[ (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month == nextm_day.month) ])  </pre>
+
 </body>
 </html>
